# larsimdnn

./: CMakeLists.txt  CMakePresets.json  README.md
larsimdnn/: CMakeLists.txt
larsimdnn/PhotonPropagation/: CMakeLists.txt  PDFastSimANNFD1_module.cc  PDFastSimANN_module.cc
larsimdnn/PhotonPropagation/TFLoaderTools/: CMakeLists.txt  TFLoader.cc  TFLoader.h  TFLoaderMLP.h  TFLoaderMLP_tool.cc  tfloader_tool.fcl
larsimdnn/PhotonPropagation/savedmodel/: saved_model.pb
larsimdnn/PhotonPropagation/savedmodel/variables/: variables.data-00000-of-00001  variables.index
larsimdnn/PhotonSimulation/: CMakeLists.txt  PDFastSimGAN_module.cc
larsimdnn/PhotonSimulation/TFLoaderTools/: CMakeLists.txt  TFLoader.cc  TFLoaderGAN.h  TFLoaderGAN_tool.cc  tfloader_gan_tool.fcl
ups/: product_deps
